--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,16 @@
+
+  pre{
+    white-space: pre-wrap;
+  }
+  @keyframes spin {
+  0% {
+  transform: rotate(0deg);
+  }
+  100% {
+  transform: rotate(360deg);
+  }
+  }
+
 .qaauto-tree-invisible {
     display: none;
   }
