--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
-<as-split direction="horizontal" [restrictMove]="true" [useTransition]="true">
+<as-split direction="horizontal" [restrictMove]="true" [useTransition]="true" *ngIf="initialized">
   <as-split-area [size]="20">
-    <mat-tab-group>
+    <mat-tab-group (selectedIndexChange)="changeEnv($event)">
       <mat-tab [label]="env.name" *ngFor="let env of data">
         <mat-tree [dataSource]="env.data" [treeControl]="treeControl" class="qaauto-tree">
           <!-- This is the tree node template for leaf nodes -->
@@ -35,25 +35,50 @@
   </as-split-area>
   <as-split-area [size]="80">
     <as-split direction="vertical" >
-    <as-split-area id="frontend">      
-      <mat-tab-group *ngIf="frontend">
+    <as-split-area id="frontend">
+      <div style="display: block;height: 100%;" *ngIf="is_report">
+        <H2><b>{{report_name}}</b></H2>
+        <canvas
+          baseChart
+          style="margin:auto;width:100%;height:80%"
+          [type]="'line'"
+          [data]="lineChartData"
+          [options]="lineChartOptions"
+          [legend]="lineChartLegend"
+        >
+        </canvas>
+      </div>
+            
+      <mat-tab-group *ngIf="!is_report && frontend">
         
         <mat-tab label="Steps">          
           <a *ngIf="frontend.url" [href]="frontend.url" target="_blank"><h3>{{frontend.name}}</h3></a>
           <b>End Time:{{frontend.end_time}}</b>
-          <div *ngFor="let step of frontend.steps">{{step}}</div>
-          <div class="error">{{frontend.failed_step}}</div>
+          <div *ngFor="let step of frontend.steps"><p [ngClass] = "{'error':step.result === 'failed'}">{{step.name}}</p>
+          <table *ngIf="step.table" style="border:double"><tr *ngFor="let row of step.table">
+            <td *ngFor="let item of row" style="border:groove">{{item}}</td>
+          </tr></table></div>          
         </mat-tab>
-        <mat-tab label="Error Message"><p class="text">{{frontend.error_message}}</p></mat-tab>
+        <mat-tab label="Error Message"><pre class="text">{{frontend.error_message}}</pre></mat-tab>
           
         <mat-tab label="Screenshot"><img [src]="frontend.img"></mat-tab>
       
         <mat-tab label="Console Log"><b>{{frontend.console_log[0]}}</b>
-          <p *ngFor="let line of frontend.console_log.slice(1)"class="text">{{line}}</p></mat-tab>
+          <pre *ngFor="let line of frontend.console_log.slice(1)"class="text">{{line}}</pre></mat-tab>
       </mat-tab-group>
     </as-split-area>    
-    <as-split-area >        
-      <mat-tab-group *ngIf="backend">
+    <as-split-area >     
+      <div *ngIf="is_report">   
+        <table mat-table [dataSource]="datasources" class="mat-elevation-z8">
+          <ng-container [matColumnDef]="item" *ngFor="let item of headers">
+            <th mat-header-cell *matHeaderCellDef>{{item}}</th>
+            <td mat-cell *matCellDef="let element"> {{element[item]}} </td>            
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="headers"></tr>
+          <tr mat-row *matRowDef="let row; columns: headers;"></tr>
+        </table>
+      </div>
+      <mat-tab-group *ngIf="!is_report && backend">
         <mat-tab *ngFor="let server of backend" [label] = "server.name"><div class="text" *ngFor="let line of server.logs">{{line.log_time}}:{{line.content}}<hr></div></mat-tab>
       </mat-tab-group>
     </as-split-area>
